--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,9 @@ jobs:
     - name: Install dependencies
       run: yarn install
     - name: Deploy
-      run: yarn deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        publish_dir: ./build
+        allow_empty_commit: true
+        force_orphan: true
