[#4] Build before deploying

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
         node-version: '13.x'
     - name: Install dependencies
       run: yarn install
+    - name: Build
+      run: yarn build
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
